# ChatBot-HUS

./: .gitignore  Chatbot_TuyenSinh_RAG_FAISS_Tables.docx  Chatbot_TuyenSinh_RAG_FAISS_Tables_OpenSourceLLM.docx  README.md
backend/: README.md  pyproject.toml
backend/src/cli/: ingest.py  query.py
backend/src/rag/: __init__.py  chunking.py  config.py  document_parsers.py  embedding.py  llm.py  pipeline.py  server.py  service.py  vector_store.py
backend/src/rag/cli/: __init__.py  ingest.py  query.py
backend/tests/: test_chunking.py  test_cli_entrypoints.py  test_server.py  test_service.py
frontend/: .env.example  env.d.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/lib/: backend.ts  prompt.ts
